Fix a bug which prevented ND6_IFF_IFDISABLED flag from clearing when the newly-added IPv6 address was /128.

PR:	188032

Former-commit-id: ec5941bc680ae4dcf29a6738e72de79653c99883